fiz a pagina sobre o zoo

--- a/HTML e CSS/home.html
+++ b/HTML e CSS/home.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZOO</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
     <style>
@@ -21,7 +20,7 @@
                 justify-content: center;
               }
     </style>
-        <img src="LOGO.png" alt="logo" width="150px">
+        <img src="IMAGENS/LOGO.png" alt="logo" width="150px">
 </div>
 <div class="container" id="itens"> 
 
@@ -42,10 +41,9 @@
     </style>
     
         <a href="HOME.HTML"><button class="botoes">HOME</button></a>
-        <a href="O-ZOOLOGICO.HTML"><button class="botoes">O ZOOLÓGICO</button></a>  
+        <a href="O-ZOO.HTML"><button class="botoes">O ZOOLÓGICO</button></a>  
         <a href="ANIMAIS.html"><button class="botoes">ANIMAIS</button></a>  
-        <a href="VEGETACAO.html"><button class="botoes">VEGETAÇÃO</button></a>     
-        <a href="COMO-CHEGAR.html"><button class="botoes">CHEGAR</button></a>
+        <a href="COMO-CHEGAR.html"><button class="botoes">COMO CHEGAR</button></a>
 <style>
     .botoes {
         background:transparent; 
@@ -135,7 +133,7 @@
         <p class="conteudo-principal-paragrafo"> Aqui todos entram de graça para se divertir. </p> 
         <a href="o-zoo.html" class="conteudo-principal-botao">  Saiba mais </a>
 </div>
-    <img src="safarihome.png" alt="safari" class="conteudo-principal-img">
+    <img src="IMAGENS/safarihome.png" alt="safari" class="conteudo-principal-img">
 </section>
 <section class="conteudo-secundario">
     <style>
