adicionei animais e como chegar

--- a/HTML e CSS/o-zoo.html
+++ b/HTML e CSS/o-zoo.html
@@ -54,10 +54,11 @@
           } 
 </style>
 </div>
+</header>
 <main class="conteudo-zoo">
 
     <style> 
-    .conteudo-zoo {
+      .conteudo-zoo {
         margin-right: 400px;
         margin-left: 400px;
       }
@@ -99,20 +100,21 @@
     </section>
 </div>
 <div class="segunda-parte">
-    <style>
-        .segunda-parte {
+<style>
+    .segunda-parte {
             background-image: url(IMAGENS/arara4.png);
-        }
-    </style>
+    }
+</style>
 <div class='conteudo-secundario-zoo-escrito'>
  <section class="conteudo-secundario-zoo">
-        <style> .conteudo-secundario-zoo {
+<style> 
+    .conteudo-secundario-zoo {
             display: flex;
             flex-direction: row;
             align-items:center;
             justify-content: center;
-          }
-        .conteudo-secundario-zoo-paragrafo {
+    }
+    .conteudo-secundario-zoo-paragrafo {
          font-family: 'Sarala', sans-serif;
          font-weight: 400;
          font-size: 24px;
